Minor bugfixes, added tests and comments

--- a/impedance-control.ipynb
+++ b/impedance-control.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Closed kinematic chain hopper, using minimal coordinates"
+    "# Closed kinematic chain hopper, using minimal coordinates\n",
+    "\n",
+    "## TODO: next step: add foot with $(x,~y)$ offsets"
    ]
   },
   {
@@ -17,7 +19,8 @@
     "import numpy as np\n",
     "import physical_education as pe\n",
     "\n",
-    "%\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
     "\n",
     "vec = lambda *args: sp.Matrix(args)\n",
     "simplify = lambda m: pe.utils.parsimp(m, nprocs=2, f=sp.simplify)\n",
@@ -47,7 +50,6 @@
     "\n",
     "# two input torques\n",
     "τl, τr = sp.Matrix(sp.symbols('\\\\tau_:2', real=True))\n",
-    "\n",
     "u = vec(τl, τr)\n",
     "\n",
     "# two ground reaction forces\n",
@@ -62,7 +64,7 @@
    "source": [
     "# the states of the leg\n",
     "def sym_and_derivs(symbol: str):\n",
-    "    return sp.symbols(r'%s \\dot{%s} \\ddot{%s}' % (symbol, symbol, symbol))\n",
+    "    return sp.symbols(r'%s \\dot{%s} \\ddot{%s}' % (symbol, symbol, symbol), real=True)\n",
     "\n",
     "full_system = False\n",
     "\n",
@@ -98,9 +100,9 @@
     "def time_derivative(vector: sp.Matrix, state=vec(*q, *dq), state_deriv=vec(*dq, *ddq)):\n",
     "    return vector.jacobian(state) @ state_deriv\n",
     "\n",
-    "def time_derivative_matrix(matrix: sp.Matrix, *args):\n",
-    "    n,m = matrix.shape\n",
-    "    return time_derivative(matrix.reshape(n*m, 1), *args).reshape(n,m)"
+    "def time_derivative_matrix(matrix: sp.Matrix, **kwargs):\n",
+    "    n, m = matrix.shape\n",
+    "    return time_derivative(matrix.reshape(n*m, 1), **kwargs).reshape(n, m)"
    ]
   },
   {
@@ -117,11 +119,11 @@
    "outputs": [],
    "source": [
     "def get_lower_leg_eqns():\n",
-    "    th_ll_TMP, th_lr_TMP = sp.symbols('th_ll th_lr')\n",
+    "    th_ll_sym, th_lr_sym = sp.symbols('th_ll th_lr')\n",
     "\n",
     "    a = thul - thur\n",
-    "    b = thur + (180 - th_lr_TMP)\n",
-    "    c = th_ll_TMP + (180 - thul)\n",
+    "    b = thur + (180 - th_lr_sym)\n",
+    "    c = th_ll_sym + (180 - thul)\n",
     "    d = 360 - (a + b + c)\n",
     "\n",
     "    thll, thlr = sp.solve([\n",
@@ -130,7 +132,7 @@
     "            2*ru**2 * (1 - sp.cos(a)),\n",
     "            2*rl**2 * (1 - sp.cos(d))\n",
     "        )\n",
-    "    ], (th_ll_TMP, th_lr_TMP))[0]\n",
+    "    ], (th_ll_sym, th_lr_sym))[0]\n",
     "    \n",
     "    dthll, dthlr = vec(thll, thlr).jacobian([thul, thur]) @ vec(dthul, dthur)\n",
     "    \n",
@@ -143,7 +145,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "thll, thlr, dthll, dthlr = get_lower_leg_eqns()"
+    "thll, thlr, dthll, dthlr = get_lower_leg_eqns()\n",
+    "\n",
+    "# def make_plot(thur, thul, thlr, thll, ru, rl):\n",
+    "#     import matplotlib.pyplot as plt\n",
+    "#     from math import sin, cos\n",
+    "#     plt.style.use('seaborn')\n",
+    "\n",
+    "#     xlk, ylk = cos(thul)*ru, sin(thul)*ru\n",
+    "#     xlf, ylf = xlk + cos(thll)*rl, ylk + sin(thll)*rl\n",
+    "#     xrk, yrk = cos(thur)*ru, sin(thur)*ru\n",
+    "#     xrf, yrf = xrk + cos(thlr)*rl, yrk + sin(thlr)*rl\n",
+    "#     plt.plot([0, xlk, xlf], [0, ylk, ylf])\n",
+    "#     plt.plot([0, xrk, xrf], [0, yrk, yrf])\n",
+    "#     plt.show()\n",
+    "\n",
+    "# _mapping = {thul: 0, thur: 1, ru: 1.5, rl: 1}\n",
+    "# f = lambda x: float(x.subs(_mapping).evalf())\n",
+    "# make_plot(0, 1, f(thll), f(thlr), 1.5, 1)"
    ]
   },
   {
@@ -152,10 +171,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from physical_education.utils import rot\n",
+    "\n",
     "# the base\n",
+    "thb = 0\n",
     "Pb_I = vec(xb, yb)\n",
-    "Rb_I = pe.utils.rot(0).T\n",
-    "# Rb_I = pe.utils.rot(thb).T\n",
+    "Rb_I = rot(thb).T\n",
     "\n",
     "# connection between base and top links\n",
     "conn_b = Pb_I\n",
@@ -164,30 +185,58 @@
     "conn_rs = conn_b #+ Rb_I @ Mat([ rb/2, 0])\n",
     "\n",
     "# the top links (shoulder to knee)\n",
-    "Pul_ul = vec(0, -ru/2)\n",
-    "Rul_I = pe.utils.rot(thul).T\n",
+    "Pul_ul = vec(ru/2, 0)\n",
+    "Rul_I = rot(thul).T\n",
     "Pul_I = simplify(conn_ls + Rul_I @ Pul_ul)\n",
     "\n",
-    "conn_lk = conn_ls + Rul_I @ vec(0, -ru)\n",
+    "conn_lk = conn_ls + Rul_I @ vec(ru, 0)\n",
     "\n",
-    "Pur_ur = vec(0, -ru/2)\n",
-    "Rur_I = pe.utils.rot(thur).T\n",
+    "Pur_ur = vec(ru/2, 0)\n",
+    "Rur_I = rot(thur).T\n",
     "Pur_I = simplify(conn_rs + Rur_I @ Pur_ur)\n",
     "\n",
-    "conn_rk = conn_rs + Rur_I @ vec(0, -ru)\n",
+    "conn_rk = conn_rs + Rur_I @ vec(ru, 0)\n",
     "\n",
     "# the bottom links (knee to foot)\n",
-    "Pll_ll = vec(0, -rl/2)\n",
-    "Rll_I = pe.utils.rot(thll).T\n",
+    "Pll_ll = vec(rl/2, 0)\n",
+    "Rll_I = rot(thll).T\n",
     "Pll_I = simplify(conn_lk + Rll_I @ Pll_ll)\n",
     "\n",
-    "conn_lf = conn_lk + Rll_I @ vec(0, -rl)\n",
+    "conn_lf = conn_lk + Rll_I @ vec(rl, 0)\n",
     "\n",
-    "Plr_lr = vec(0, -rl/2)\n",
-    "Rlr_I = pe.utils.rot(thlr).T\n",
+    "Plr_lr = vec(rl/2, 0)\n",
+    "Rlr_I = rot(thlr).T\n",
     "Plr_I = simplify(conn_rk + Rlr_I @ Plr_lr)\n",
     "\n",
-    "conn_rf = conn_rk + Rlr_I @ vec(0, -rl)"
+    "conn_rf = conn_rk + Rlr_I @ vec(rl, 0)\n",
+    "\n",
+    "# knees should be close together\n",
+    "assert all(-0.001 < float(x) < 0.001\n",
+    "           for x in full_simp((conn_lf - conn_rf).subs({thul: -2, thur: -1})))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def make_plot2(lk, rk, lf, rf, mapping):\n",
+    "#     import matplotlib.pyplot as plt\n",
+    "#     plt.style.use('seaborn')\n",
+    "#     f = lambda x: map(float, x.subs(mapping).evalf())\n",
+    "    \n",
+    "#     xlk, ylk = f(lk)\n",
+    "#     xrk, yrk = f(rk)\n",
+    "#     xlf, ylf = f(lf)\n",
+    "#     xrf, yrf = f(rf)\n",
+    "#     plt.plot([0, xlk, xlf], [0, ylk, ylf], label='thl')\n",
+    "#     plt.plot([0, xrk, xrf], [0, yrk, yrf], label='thr')\n",
+    "#     plt.legend()\n",
+    "#     plt.axis('equal')\n",
+    "#     plt.show()\n",
+    "\n",
+    "# make_plot2(conn_lk, conn_rk, conn_lf, conn_rf, {thul: -2, thur: -1, **constants_mapping})"
    ]
   },
   {
@@ -247,10 +296,10 @@
    "outputs": [],
    "source": [
     "# contact\n",
-    "def getfoot():\n",
+    "def getfoot_cartesian():\n",
     "    from sympy import sin, cos, sqrt\n",
-    "    th1 = thul\n",
-    "    th2 = thur\n",
+    "    th1 = thur\n",
+    "    th2 = thul\n",
     "    l1 = ru\n",
     "    l2 = rl\n",
     "    diff = (th1 - th2)/2\n",
@@ -258,9 +307,13 @@
     "    s = (th1 + th2)/2\n",
     "    return vec(body * cos(s), body * sin(s))\n",
     "\n",
-    "foot = getfoot()\n",
+    "foot = getfoot_cartesian()\n",
     "J_L = foot.jacobian(q)\n",
-    "L = vec(Lx, Ly)"
+    "L = vec(Lx, Ly)\n",
+    "\n",
+    "# check that we get the same results\n",
+    "f = lambda x: list(map(float, full_simp(x.subs({thul: -2, thur: -1}))))\n",
+    "assert np.allclose(f(foot), f(conn_lf))"
    ]
   },
   {
@@ -278,14 +331,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "th1 = thul\n",
-    "th2 = thur\n",
-    "rp = ru * sp.cos((th1-th2)/2) + sp.sqrt(rl**2 - ru**2 * sp.sin((th1-th2)/2)**2)\n",
-    "#rp = sp.simplify(sp.sqrt(conn_rf[1]**2 + conn_rf[0]**2))\n",
-    "#thp = sp.atan2(conn_rf[1], conn_rf[0])\n",
-    "thp = (thul + thur)/2\n",
+    "def getfoot_polar():\n",
+    "    from sympy import sin, cos, sqrt\n",
+    "    th1 = thur\n",
+    "    th2 = thul\n",
+    "    d = (th1 - th2)/2\n",
     "\n",
-    "foot_polar = vec(rp, thp)\n",
+    "    # the following three lines work, but don't simplify fully\n",
+    "    # to be \"mathematically correct\" (nonsense!) so it's better\n",
+    "    # to just write the equation out by hand, again\n",
+    "    # xf, yf = foot\n",
+    "    # rp = sqrt(yf**2 + xf**2)\n",
+    "    # thp = sp.atan(yf / xf)  # atan2?\n",
+    "    rp = ru * cos(d) + sqrt(rl**2 - ru**2 * sin(d)**2)\n",
+    "    thp = (thul + thur)/2\n",
+    "    return simplify(vec(rp, thp))\n",
+    "\n",
+    "foot_polar = getfoot_polar()\n",
     "foot_polar"
    ]
   },
@@ -417,7 +479,7 @@
    "source": [
     "torque_input = full_simp(\n",
     "    M @ ddq_eqn + C + G - J_L.T @ L\n",
-    ")3\n",
+    ")\n",
     "\n",
     "sp.count_ops(torque_input), torque_input.free_symbols"
    ]
@@ -513,20 +575,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from scripts.controller_generated import impedance_control\n",
     "import math\n",
     "\n",
-    "test_input = np.random.random(9)\n",
+    "test_input = np.random.random(9)  # 9 inputs\n",
     "\n",
     "for lamb, disk in zip(current_lambdified(*test_input), impedance_control(*test_input)):\n",
     "    if not math.isclose(lamb, disk):\n",
@@ -626,14 +678,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhs = (\n",
-    "    C + G - Bu - J_L.T @ L\n",
-    ").subs(constants_mapping).evalf()\n",
+    "# rhs = (\n",
+    "#     C + G - Bu - J_L.T @ L\n",
+    "# ).subs(constants_mapping).evalf()\n",
     "\n",
-    "args = [*q, *dq, *u, Lx, Ly]\n",
-    "assert rhs.free_symbols.issubset(set(args))\n",
+    "# args = [*q, *dq, *u, Lx, Ly]\n",
+    "# assert rhs.free_symbols.issubset(set(args))\n",
     "\n",
-    "dynamics_rhs = sp.lambdify(args, rhs)"
+    "# dynamics_rhs = sp.lambdify(args, rhs)"
    ]
   },
   {
@@ -642,7 +694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamics_lhs = sp.lambdify([thul, thur], M)"
+    "# dynamics_lhs = sp.lambdify([thul, thur], M)"
    ]
   },
   {
@@ -651,7 +703,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.linalg.solve(dynamics_lhs(1, 2), dynamics_rhs(*[1]*len(args)))"
+    "# np.linalg.solve(dynamics_lhs(1, 2), dynamics_rhs(*[1]*len(args)))"
    ]
   },
   {
@@ -660,15 +712,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ddq_f = (\n",
-    "    M.solve(rhs)\n",
-    "    # M @ ddq + C + G - B - J_L.T @ L\n",
-    ")\n",
+    "# ddq_f = (\n",
+    "#     M.solve(rhs)\n",
+    "#     # M @ ddq + C + G - B - J_L.T @ L\n",
+    "# )\n",
     "\n",
-    "# ddq_f = pe.utils.parsimp(ddq_f, nprocs=4, f=sp.trigsimp)\n",
-    "# ddq_f = pe.utils.parsimp(ddq_f, nprocs=4, f=sp.simplify)\n",
+    "# # ddq_f = pe.utils.parsimp(ddq_f, nprocs=4, f=sp.trigsimp)\n",
+    "# # ddq_f = pe.utils.parsimp(ddq_f, nprocs=4, f=sp.simplify)\n",
     "\n",
-    "# ddq_f"
+    "# # ddq_f"
    ]
   },
   {
